test: update integration tests to align with ServerTests.md specification
- AuthIntegrationTest: Add token expiry test and expect 403 for invalid tokens.

- SecurityIntegrationTest: Enhance XSS checks and expect 403 for missing auth.

- StoreIntegrationTest: Verify reconciliation report structure.